fix form field content cut on buttom in safari
plus remove overlap of pull-down icon and field content

--- a/site/static/sass/screen.sass
+++ b/site/static/sass/screen.sass
@@ -113,7 +113,9 @@ html, body
       line-height: normal
       border: 1px solid #e0e0e0
       border-radius: 4px
-      padding: 10px 15px
+    select
+      /* right spacing to allow for arrow-down */
+      padding-right: 30px
       &:focus
         box-shadow: unset
         border-color: #337ab7
